# One

./: .gitignore  AGENT.md  README.md  alembic.ini  one-iconography-system.html  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_today_order_overrides.py  0003_coach_card_verse_text.py  0004_reflection_sentiment.py
api/: openapi.yaml
docs/: analytics-parallelization-plan.md  architecture-implementation.md  emotional-tone.md  widgetkit-implementation-note.md
ios/OneApp/: project.yml
ios/OneApp/Configs/: Debug.xcconfig  Release.xcconfig
ios/OneApp/OneApp/: Info.Debug.plist  Info.Release.plist  OneApp.entitlements  OneApp.swift
ios/OneApp/OneApp.xcodeproj/: project.pbxproj
ios/OneApp/OneAppTests/: FinanceFeatureTests.swift  IconAssetTests.swift  (+2 more)
ios/OneClient/: Package.swift
one/: __init__.py  analytics.py  bootstrap.py  coaching.py  models.py  notifications.py  reflections.py  tracking.py
one_api/: __init__.py  config.py  main.py  metrics.py  observability.py  schemas.py
one_api/api/: analytics.py  auth.py  categories.py  coach_cards.py  completions.py  deps.py  habits.py  preferences.py  reflections.py  today.py  todos.py  users.py
one_api/auth/: __init__.py  dependencies.py  provider.py
one_api/db/: mappers.py  models.py  repositories.py  session.py
one_api/services/: analytics_service.py  task_service.py  today_service.py  user_service.py
tests/: test_analytics.py  test_backend_api.py  test_bootstrap_coaching.py  test_migrations.py  test_reflections_notifications.py  test_tracking.py
tools/: sync_streamline_icons.py
(+133 files in other folders)
