[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "one-core"
version = "0.1.0"
description = "Core domain and analytics foundation for the One app"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "sqlalchemy>=2.0.43",
  "alembic>=1.16.5",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "httpx>=0.28.1",
  "email-validator>=2.2.0",
  "PyYAML>=6.0.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["one*", "one_api*"]
